# wire-cell-arrow

./: AUTHORS  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  README.md
cmake/: wire_cell_arrowConfig.cmake.in
docs/: api.md  design.md  fidelity.md  schema-versioning.md
test/: CMakeLists.txt  test_arrow_depo.cpp  test_arrow_frame.cpp  test_arrow_sets.cpp  test_arrow_tensor.cpp  test_arrow_trace.cpp  test_collection_ops.cpp  test_depo_converter.cpp  test_deposet_converter.cpp  test_frame_dense_converter.cpp  test_frame_sparse_converter.cpp  test_helpers.h  test_helpers.hpp  test_roundtrip.cpp  test_schema_version.cpp  test_schemas.cpp  test_tensor_converter.cpp  test_tensorset_converter.cpp  test_trace_converter.cpp  test_trivial.cpp  test_version.cpp
wire_cell_arrow/: ArrowDepo.cpp  ArrowDepo.hpp  ArrowDepoSet.cpp  ArrowDepoSet.h  ArrowFrame.cpp  ArrowFrame.h  ArrowFrame.hpp  ArrowTensor.cpp  ArrowTensor.hpp  ArrowTensorSet.cpp  ArrowTensorSet.hpp  ArrowTrace.cpp  ArrowTrace.h  ArrowTrace.hpp  Converters.cpp  Converters.h  Converters.hpp  Ops.cpp  Ops.hpp  Version.cpp  Version.h  Version.hpp
